# spikeboost

./: .gitmodules
app_python/examples/: example_pybind11.py
cpp/: CMakeLists.txt  cmake_global.cmake
cpp/cameras/: CMakeLists.txt  sps_usb_device.cpp  sps_usb_emulator.cpp  sps_usb_impl.h  sps_usb_pybind11.cpp
cpp/include/cameras/: sps_usb.h
cpp/test_examples/: CMakeLists.txt
cpp/test_examples/cpp/: CMakeLists.txt  test_sps_usb.cpp
